--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,20 @@ Style para el html en conjunto
 html{
     font-size: 62.5%;
     box-sizing: border-box; /*Para que el padding no afecte*/
+    scroll-snap-type: y mandatory;
 }
+
+/*Scroll Snap*/
+.servicios, .navegacion-principal, .formulario{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
+
 
 /**
 Style para el body 
@@ -45,6 +55,10 @@ Style para el contenedor de la navegación
     margin: 0 auto; /*Top right bottom left */
 }
 
+.contenedor h2{
+    padding: 2.5rem;
+}
+
 .boton{
     background-color: var(--secundario);
     color: var(--blanco);
@@ -56,8 +70,13 @@ Style para el contenedor de la navegación
     border-radius: .5rem;
     width: 90%;
     text-align: center;
-
+    border: none;
 }
+
+.boton:hover{
+    cursor: pointer;
+}
+
 @media (min-width: 480px) { /* El botón se ajusta al tamaño de la pantalla*/
     .boton{
         width: auto;
@@ -160,4 +179,99 @@ Style para los links de la navegación
 
 .contenido-hero h2, .contenido-hero p{
     color: var(--blanco);
+}
+
+/*Servicios*/
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
+}
+
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3{
+    color: var(--secundario);
+    font-weight: 700;
+}
+
+.servicio p{
+    line-height: 2;
+
+}
+
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--terciario);
+    border-radius: 50%;
+    display: flex;  
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/*Contacto*/
+.formulario{
+    background-color: var(--primario);
+    width: min(60rem, 100%); /*Utilizar el valor más pequeño*/
+    margin: 0 auto;
+    margin-top: 0;
+    padding: 2rem;
+    padding-bottom: 4rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: var(--blanco);
+}
+
+.contenedor-campos{
+    padding-bottom: 2rem;
+}
+
+.campo{
+    margin-bottom: 1rem;
+}
+
+.campo label{
+    color: var(--blanco);
+    font-weight: 700;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.campo input{
+    background-color: var(--degradado);
+}
+
+.campo textarea{
+    height: 20rem;
+}
+
+.campo input,
+.campo textarea{ 
+    background-color: var(--degradado);
+    width: 100%; 
+    border: none;
+    padding: 0.5rem; 
+    border-radius: 0.5rem; 
+}
+
+.enviar .boton{
+    width: 100%;
+    
 }
